@@ -153,7 +153,10 @@ namespace libtorrent
 		virtual ~peer_connection();
 
 		void set_peer_info(policy::peer* pi)
-		{ m_peer_info = pi; }
+		{
+			TORRENT_ASSERT(m_peer_info == 0 || pi == 0 );
+			m_peer_info = pi;
+		}
 
 		policy::peer* peer_info_struct() const
 		{ return m_peer_info; }
